@@ -9,14 +9,6 @@
 	<name>${project.artifactId}</name>
 	<packaging>war</packaging>
 
-<!--	<properties>-->
-<!--		<lombok.version>1.18.30</lombok.version>-->
-<!--		<mapstruct.version>1.5.5.Final</mapstruct.version>-->
-<!--		<maven.compiler.source>17</maven.compiler.source>-->
-<!--		<maven.compiler.target>17</maven.compiler.target>-->
-<!--		<maven.compiler.release>17</maven.compiler.release>-->
-<!--	</properties>-->
-
 	<parent>
 		<groupId>r-uu</groupId>
 		<artifactId>r-uu.codespace.app.jeeeraaah.backend.api</artifactId>
@@ -129,18 +121,6 @@
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-slf4j2-impl</artifactId>
 		</dependency>
-<!--		<dependency>-->
-<!--			<groupId>ch.qos.logback</groupId>-->
-<!--			<artifactId>logback-classic</artifactId>-->
-<!--			<version>1.4.14</version>-->
-<!--			<scope>runtime</scope>-->
-<!--		</dependency>-->
-<!--		<dependency>-->
-<!--			<groupId>org.jboss.logmanager</groupId>-->
-<!--			<artifactId>jboss-logmanager</artifactId>-->
-<!--			<version>2.1.18.Final</version>-->
-<!--		</dependency>-->
-
 		<dependency>
 			<groupId>r-uu</groupId>
 			<artifactId>r-uu.codespace.lib.junit</artifactId>
@@ -157,16 +137,6 @@
 			<artifactId>junit-jupiter-api</artifactId>
 			<scope>test</scope>
 		</dependency>
-<!--		<dependency>-->
-<!--			<groupId>org.junit.jupiter</groupId>-->
-<!--			<artifactId>junit-jupiter-engine</artifactId>-->
-<!--			<scope>test</scope>-->
-<!--		</dependency>-->
-<!--		<dependency>-->
-<!--			<groupId>org.junit.platform</groupId>-->
-<!--			<artifactId>junit-platform-suite-engine</artifactId>-->
-<!--		  <scope>test</scope>-->
-<!--		</dependency>-->
 		<dependency>
 			<groupId>org.jboss.weld</groupId>
 			<artifactId>weld-junit5</artifactId>
@@ -182,57 +152,69 @@
 	<build>
 		<finalName>${project.artifactId}</finalName>
 		<plugins>
+<!--			<plugin>-->
+<!--				<groupId>org.apache.maven.plugins</groupId>-->
+<!--				<artifactId>maven-compiler-plugin</artifactId>-->
+<!--				<configuration>-->
+<!--					<compilerArgs>-->
+<!--						<arg>-parameters</arg>-->
+<!--						<arg>-Xlint:all</arg>-->
+<!--						<arg>-Amapstruct.defaultComponentModel=default</arg>-->
+<!--						&lt;!&ndash; Add these JVM arguments for Java 24 compatibility &ndash;&gt;-->
+<!--						<arg>-J&#45;&#45;add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>-->
+<!--						<arg>-J&#45;&#45;add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>-->
+<!--					</compilerArgs>-->
+<!--					<useIncrementalCompilation>false</useIncrementalCompilation>-->
+<!--					&lt;!&ndash; forceJavacCompilerUse is deprecated, using fork and compiler args instead &ndash;&gt;-->
+<!--					<fork>true</fork>-->
+<!--					<showWarnings>true</showWarnings>-->
+<!--					<showDeprecation>true</showDeprecation>-->
+<!--					<annotationProcessorPaths>-->
+<!--						<path>-->
+<!--							<groupId>org.projectlombok</groupId>-->
+<!--							<artifactId>lombok</artifactId>-->
+<!--						</path>-->
+<!--						<path>-->
+<!--							<groupId>org.mapstruct</groupId>-->
+<!--							<artifactId>mapstruct-processor</artifactId>-->
+<!--						</path>-->
+<!--					</annotationProcessorPaths>-->
+<!--				</configuration>-->
+<!--			</plugin>-->
+<!--			<plugin>-->
+<!--				<groupId>org.apache.maven.plugins</groupId>-->
+<!--				<artifactId>maven-surefire-plugin</artifactId>-->
+<!--				<configuration>-->
+<!--					<argLine>-->
+<!--						&#45;&#45;add-opens=java.base/java.lang=ALL-UNNAMED-->
+<!--						&#45;&#45;add-opens=java.base/java.util=ALL-UNNAMED-->
+<!--					</argLine>-->
+<!--					<properties>-->
+<!--						<configurationParameters>-->
+<!--							junit.jupiter.testinstance.lifecycle.default = per_class-->
+<!--						</configurationParameters>-->
+<!--					</properties>-->
+<!--				</configuration>-->
+<!--			</plugin>-->
+<!--			<plugin>-->
+<!--				<groupId>org.apache.maven.plugins</groupId>-->
+<!--				<artifactId>maven-war-plugin</artifactId>-->
+<!--				<configuration>-->
+<!--					<failOnMissingWebXml>false</failOnMissingWebXml>-->
+<!--				</configuration>-->
+<!--			</plugin>-->
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
+				<groupId>io.openliberty.tools</groupId>
+				<artifactId>liberty-maven-plugin</artifactId>
 				<configuration>
-					<compilerArgs>
-						<arg>-parameters</arg>
-						<arg>-Xlint:all</arg>
-						<arg>-Amapstruct.defaultComponentModel=default</arg>
-						<!-- Add these JVM arguments for Java 24 compatibility -->
-						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
-						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
-					</compilerArgs>
-					<useIncrementalCompilation>false</useIncrementalCompilation>
-					<!-- forceJavacCompilerUse is deprecated, using fork and compiler args instead -->
-					<fork>true</fork>
-					<showWarnings>true</showWarnings>
-					<showDeprecation>true</showDeprecation>
-					<annotationProcessorPaths>
-						<path>
-							<groupId>org.projectlombok</groupId>
-							<artifactId>lombok</artifactId>
-						</path>
-						<path>
-							<groupId>org.mapstruct</groupId>
-							<artifactId>mapstruct-processor</artifactId>
-						</path>
-					</annotationProcessorPaths>
+					<bootstrapProperties>
+						<default.http.port>9080</default.http.port>
+						<default.https.port>9443</default.https.port>
+						<app.install.root>${project.build.directory}/liberty/wlp/usr/servers/defaultServer/apps</app.install.root>
+						<server.config.dir>${project.basedir}/src/main/resources</server.config.dir>
+					</bootstrapProperties>
 				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-<!--				<version>3.2.5</version>-->
-				<configuration>
-					<argLine>
-						--add-opens=java.base/java.lang=ALL-UNNAMED
-						--add-opens=java.base/java.util=ALL-UNNAMED
-					</argLine>
-					<properties>
-						<configurationParameters>
-							junit.jupiter.testinstance.lifecycle.default = per_class
-						</configurationParameters>
-					</properties>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-war-plugin</artifactId>
-				<configuration>
-					<failOnMissingWebXml>false</failOnMissingWebXml>
-				</configuration>
+<!--				<copyFile>${project.basedir}/src/main/resources/server.xml</copyFile>-->
 			</plugin>
 		</plugins>
 	</build>
